# pano2vr

./: .gitignore  README.md  demo.glb  index.html  pyproject.toml
mcp_server/: server.py
src/pano2vr/: __init__.py  cli.py  pipeline.py
src/pano2vr/capture/: __init__.py  loader.py
src/pano2vr/depth/: __init__.py  estimator.py
src/pano2vr/export/: __init__.py  gltf_export.py
src/pano2vr/geometry/: __init__.py  sphere_mesh.py
tests/: conftest.py  test_capture.py  test_geometry.py  test_pipeline.py
viewer/: index.html
